[package]
name = "max-grrs"
version = "0.1.0"
authors = ["vandijcksm@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/maxvandijck/grrs"
repository = "https://github.com/maxvandijck/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.19"
env_logger = "0.10.0"
tempfile = "3.6.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
